sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/NameCardHistory__c.object-meta.xml
<CustomObject>
    <description>名刺オブジェクトへのステータス変更履歴を登録
Business Card History: Stores updating business card data status.</description>
    <label>名刺履歴</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>名刺履歴No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>