sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/fields/delete_time__c.field-meta.xml
<CustomField>
    <fullName>delete_time__c</fullName>
    <label>削除日時</label>
    <type>DateTime</type>
</CustomField>