sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/fields/Dev__c.field-meta.xml
<CustomField>
    <fullName>Dev__c</fullName>
    <label>2次納品部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>