sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/fields/error_code__c.field-meta.xml
<CustomField>
    <fullName>error_code__c</fullName>
    <label>エラーコード</label>
    <length>1</length>
    <type>Text</type>
</CustomField>