sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/fields/NameCard__c.field-meta.xml
<CustomField>
    <fullName>NameCard__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>名刺オブジェクトID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>