sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/fields/NameCardOwner__c.field-meta.xml
<CustomField>
    <fullName>NameCardOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名刺所有者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>nc_NameCardOwner</relationshipName>
    <type>Lookup</type>
</CustomField>