sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/fields/primary_delivery_time__c.field-meta.xml
<CustomField>
    <fullName>primary_delivery_time__c</fullName>
    <label>一次納品日時</label>
    <type>DateTime</type>
</CustomField>