sfdx-source/SmartVisca/main/default/objects/NameCardHistory__c/fields/secondary_delivery_time__c.field-meta.xml
<CustomField>
    <fullName>secondary_delivery_time__c</fullName>
    <label>二次納品日時</label>
    <type>DateTime</type>
</CustomField>